# franka_softhand

./: LICENSE  README.md  todo.todo
franka_softhand/: CMakeLists.txt  package.xml
franka_softhand_control/configs/: parameters.yaml
franka_softhand_description/: CMakeLists.txt  package.xml
franka_softhand_description/config/: sim_controllers.yaml
franka_softhand_description/launch/: franka_softhand.launch
franka_softhand_description/robot/: franka_softhand.urdf.xacro  franka_softhand.xacro
franka_softhand_description/world/: table.world
