<?xml version="1.0"?>
<package>
	<name>franka_softhand</name>
	<version>1.0.0</version>
	<description>The franka_softhand package</description>

	<author email="giorgio.simonini@phd.unipi.it">Giorgio Simonini</author>
	<maintainer email="giorgio.simonini@phd.unipi.it">Giorgio Simonini</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<export>
		<metapackage/>
	</export>
</package>